# mathchem

./: README.md  cookie.txt  credit.md  init.py  setup.cfg  updatenotes.md
docs/: 404.html  index.html  script.js  style.css
example/: example.py
src/: huckelapprox.py  matrix.py  particle.py  variationtheory.py
src/cnumathchem/: __init__.py  matrix.py  stoichiometry.py
tests/: test_basic.py
visualize/: proj_huckelapprox.py  proj_particle.py  proj_variationtheory.py
