[metadata]
name = cnumathchem
version = 0.1.0
author = Choi Minseo
author_email = minseo0388@o.cnu.ac.kr
description = Mathmatical and Computational Chemistry Library with quantum chemistry
keywords = chemistry, quantum chemistry, computational chemistry, mathematical chemistry
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/minseo0388/mathchem
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: 
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy>=1.19
python_requires = >=3.6